--- a/FireLord/FireLord.csproj
+++ b/FireLord/FireLord.csproj
@@ -33,8 +33,8 @@
     <Reference Include="0Harmony, Version=2.0.0.10, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lib.Harmony.2.0.0.10\lib\net472\0Harmony.dll</HintPath>
     </Reference>
-    <Reference Include="MBOptionScreen, Version=1.1.15.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bannerlord.MBOptionScreen.1.1.15\lib\net472\MBOptionScreen.dll</HintPath>
+    <Reference Include="MBOptionScreen.v2.0.6, Version=2.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bannerlord.MBOptionScreen.2.0.6\lib\net472\MBOptionScreen.v2.0.6.dll</HintPath>
     </Reference>
     <Reference Include="StoryMode">
       <HintPath>..\..\..\..\..\StoryMode\bin\Win64_Shipping_Client\StoryMode.dll</HintPath>
@@ -189,9 +189,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoneIndex.cs" />
+    <Compile Include="IgnitionLogic.cs" />
     <Compile Include="Settings\FireLordConfig.cs" />
     <Compile Include="Settings\FireLordSettings.cs" />
-    <Compile Include="Settings\FireLordSettingsEnglish.cs" />
     <Compile Include="FireSwordLogic.cs" />
     <Compile Include="FireArrowLogic.cs" />
     <Compile Include="FireLordSubModule.cs" />
@@ -200,11 +200,12 @@
     <Compile Include="Utils\ReflectionUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy ".\FireLord.dll" "F:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\FireLord\bin\Win64_Shipping_Client"
-copy ".\MBOptionScreen.dll" "F:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\FireLord\bin\Win64_Shipping_Client"</PostBuildEvent>
+copy ".\MBOptionScreen.v2.0.6.dll" "F:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\FireLord\bin\Win64_Shipping_Client"</PostBuildEvent>
   </PropertyGroup>
 </Project>
